@@ -1,3 +1,9 @@
+2001-12-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 02757]
+	* main.c (execdict): w = conv_from_system(word)
+	* main.c (dictword): call execdict() only
+
 2001-12-27  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* url.c (openSSLHandle): accept_this_file is out of 
